Sentence case, figure short captions, latex sprt

--- a/Andrew_Jensen_Dissertation.tex
+++ b/Andrew_Jensen_Dissertation.tex
@@ -66,6 +66,7 @@
 \setAbstractFile{./src/0-Preamble/abstractFile}%                     Abstract Page (This should only include the abstract itself)
 %\setReferenceFile{./src/myBib.bib}{IEEEtran}%         References. First argument is your bibtex source file
 \setReferenceFile{./src/myBib.bib}{amsplain}%         References. First argument is your bibtex source file
+%\setReferenceFile{./src/myBib.bib}{abbrvbib}
 %                                                       the second argument is your bibtex style file.
 \setBiographicalFile{./src/0-Preamble/biographyFile}%                Biography file of the Author (you).
 
