--- a/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
+++ b/src/1-Intro/1-4_autonomous-kinematics-measurements/optimization-routine.tex
@@ -61,7 +61,7 @@ Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method 
     \begin{center}
         \includegraphics[width=0.85\linewidth]{figures/raster/direct-1D.png}
     \end{center}
-    \caption{The DIviding RECTangles (DIRECT) algorithm in one dimension. It can find the global minimum of a funciton without a-priori knowledge of the Lipschitz constant. The value of the line with slpoe $\pm K$ at each of the end-points represents the theoretical minimum for the value of the function in that region. Thus, the size of the region and the value of the function at the center help the algorithm determine potentially optimal sub-regions.}
+    \caption[The DIviding RECTangles (DIRECT) algorithm in one dimension]{The DIviding RECTangles (DIRECT) algorithm in one dimension. It can find the global minimum of a funciton without a-priori knowledge of the Lipschitz constant. The value of the line with slpoe $\pm K$ at each of the end-points represents the theoretical minimum for the value of the function in that region. Thus, the size of the region and the value of the function at the center help the algorithm determine potentially optimal sub-regions.}
     \label{fig:direct-1D}
 \end{figure}
 
@@ -69,7 +69,7 @@ Jones et al. \cite{jonesLipschitzianOptimizationLipschitz1993} propose a method 
     \begin{center}
       \includegraphics[width=0.65\linewidth]{figures/raster/direct-convex-hull.png}
     \end{center}
-    \caption{The potentially optimal regions of the DIRECT algorithm are those points that lay along the lower convex hull of the scatter plot of sub-domain size vs function value at center. This is due to those regions being the locations where the maximum possible rate of change in the function might be a minimum, without any prior knowledge of the Lipschitz constant.}
+    \caption[The potentially optimal regions of the DIRECT algorithm are those points that lay along the lower convex hull of the scatter plot of sub-domain size vs function value at center]{The potentially optimal regions of the DIRECT algorithm are those points that lay along the lower convex hull of the scatter plot of sub-domain size vs function value at center. This is due to those regions being the locations where the maximum possible rate of change in the function might be a minimum, without any prior knowledge of the Lipschitz constant.}
     \label{fig:direct-convex-hull}
 \end{figure}
 
