--- a/src/SymTrap/sym_trap_paper.tex
+++ b/src/SymTrap/sym_trap_paper.tex
@@ -73,7 +73,7 @@ Thus, for each sample, the input was $\{\theta_{Int/Ext}, \theta_{Flx/Ext}, \the
 \begin{figure}[h!]
 	\centering
 	\includegraphics[width=0.85\textwidth]{./figures/raster/symmetry-trap-dataset.png}
-	\caption{A 3D scatter plot of our training data with `true' poses in orange and `symmetry trap' poses in blue. Of note, there are distinct regions of exclusively `symmetry trap' poses, while the region of predominately `true' poises (orange cylinder along Flexion/Extension axis) also has many `symmetry trap' poses.}
+	\caption[A 3D scatter plot of our training data with `true' poses in orange and `symmetry trap' poses in blue]{A 3D scatter plot of our training data with `true' poses in orange and `symmetry trap' poses in blue. Of note, there are distinct regions of exclusively `symmetry trap' poses, while the region of predominately `true' poises (orange cylinder along Flexion/Extension axis) also has many `symmetry trap' poses.}
 	\label{fig:sym-trap-dataset}
 \end{figure}
 \subsection{Classification Algorithms}
